--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,4 +19,4 @@ jobs:
           channelId: live
           projectId: bt3103finalproject
         env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          FIREBASE_TOKEN: $({ secrets.FIREBASE_TOKEN })
