--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -16,3 +16,4 @@ jobs:
           projectId: bt3103finalproject
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+          FIREBASE_TOKEN: $({ secrets.FIREBASE_TOKEN )}
