--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BT3103FINALPROJECT }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_TOKEN }}'
           projectId: bt3103finalproject
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
