--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,9 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-'on': 
-  pull_request_target:
-    types: [assigned, opened, synchronize, reopened]
+'on': pull_request
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
@@ -14,7 +12,7 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_BT3103FINALPROJECT }}'
           projectId: bt3103finalproject
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
