--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.0.11",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "firebase": "^8.3.1",
