--- a/package.json
+++ b/package.json
@@ -8,21 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "@vue/compiler-sfc": "^3.0.10",
-=======
     "@vue/compiler-sfc": "^3.0.11",
->>>>>>> 813d35a9f40e33dd43746f386d3e6e2a5ddb5e86
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "firebase": "^8.3.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
-<<<<<<< HEAD
+    "vue-sidebar-menu": "^4.7.4",
     "vuetify": "^2.4.9"
-=======
-    "vue-sidebar-menu": "^4.7.4"
->>>>>>> 3afb6485290c9237ffed2e1fc678727f88848f34
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
