--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@vue/compiler-sfc": "^3.0.11",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.1.0",
     "core-js": "^3.9.1",
     "firebase": "^8.3.1",
     "jquery": "^3.6.0",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.5.1",
     "vue-sidebar-menu": "^4.7.4",
     "vue-textarea-autosize": "^1.1.1",
