--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "vuetify": "^2.4.9"
   },
   "devDependencies": {
+    "@nuxtjs/vuetify": "^1.11.3",
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-plugin-eslint": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^1.5.2",
     "eslint": "^7.23.0",
     "eslint-plugin-vue": "^7.8.0",
-    "sass": "^1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "vue-cli-plugin-vuetify": "~2.3.1",
     "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.7.0"
